--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "react/jsx-no-bind": "off"
+  }
 }
