chore: new project dependencies and eslint rules edits

--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -9,5 +9,7 @@
         "sourceType": "module"
     },
     "rules": {
+      "class-methods-use-this": "off",
+      "consistent-return": "off"
     }
 }
