--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.11.3",
     "uuid": "^9.0.1"
   },
@@ -20,8 +21,5 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "nodemon": "^3.0.1"
-  },
-  "rules": {
-    "import/extensions": "off"
   }
 }
