--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -13,6 +13,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "react/jsx-no-bind": "off"
+    "react/jsx-no-bind": "off",
+    "class-methods-use-this": "off"
   }
 }
