--- a/web/package.json
+++ b/web/package.json
@@ -28,12 +28,14 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.279.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
+    "react-to-print": "^2.14.15",
     "sort-by": "^1.2.0",
     "styled-components": "^6.0.8",
     "tailwind-merge": "^1.14.0",
