--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,9 @@
   "main": "src/index.js",
   "license": "MIT",
   "type": "commonjs",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
