--- a/api/vercel.json
+++ b/api/vercel.json
@@ -12,5 +12,5 @@
           "dest": "/"
         }
       ],
-      "rewrites": [{ "source": "/src/(.*)", "destination": "/src" }]
+      "rewrites": [{ "source": "/(.*)", "destination": "/" }]
     }
